--- a/composer.json
+++ b/composer.json
@@ -3,10 +3,14 @@
     "description": "A basic event store for Lumen",
     "type": "package",
     "require": {
+        "php": "^7.2",
         "andrewdevelop/hex-contracts": "dev-master",
         "andrewdevelop/event-sourcing": "dev-master",
         "illuminate/container": "^6.0",
-        "illuminate/database": "^6.0"
+        "illuminate/database": "^6.0",
+        "illuminate/support": "^6.0",
+        "illuminate/config": "^6.0",
+        "ext-json": "*"
     },
     "license": "MIT",
     "authors": [
@@ -15,13 +19,10 @@
             "email": "andrewdevelop@gmail.com"
         }
     ],
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "autoload": {
         "psr-4": {
             "Core\\EventStore\\": "src/"
         }
-    },
-    "post-install-cmd": [
-        "@php -r \"file_exists('../../../../config/eventstore.php') || copy('./config/eventstore.php', '../../../../config/eventstore.php');\""
-    ]
+    }
 }
