--- a/composer.json
+++ b/composer.json
@@ -3,8 +3,7 @@
     "description": "A basic event store for Laravel/Lumen 9",
     "type": "package",
     "require": {
-        "andrewdevelop/hex-contracts": "dev-master",
-        "andrewdevelop/event-sourcing": "dev-master",
+        "andrewdevelop/hex-contracts": "^2.0",
         "illuminate/config": "^9.0",
         "illuminate/container": "^9.0",
         "illuminate/database": "^9.0",
